Fixed menu button alignment

--- a/src/documents/styles/index.css.less
+++ b/src/documents/styles/index.css.less
@@ -431,7 +431,7 @@ body.loaded[data-mode=article] #menu.loaded {
     position: fixed;
     display: block;
     top: 130px;
-    left: 65px;
+    left: 67px;
     z-index: 3;
     width: 44px;
     height: 44px;
